--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <figure class="hero"></figure>
     <main class="content">
         <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a wooden surface with a laptop in the top left corner with a magnifying glass placed on the corner of the laptop, a cup of coffee in the bottom left corner, a pen cup with multicloured writing utensils in the top right corner, and a notebook in the center with 'SEO' written in the middle with 6 words and images relating to search engine optimization. A blue writing utensil is above the notebook and a black and red writing utensil is to the right of the notebook."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -41,7 +41,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
