--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of a person sitting down at a wooden table, using a cellphone in their left hand with a laptop in front of them being operated by their right hand. The laptop screen reads 'REPUTATION' with multiple types of graphs. A cup of liquid is to their right on the table. Another device is partially visible in the bottom right corner."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
