--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of 6 people sitting around a wooden table  with a laptop in the bottom center and a tablet in the top left, top right and bottom left. There are multiple words and images in colourful text and colourful background colours."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
