Added alt attributes to .benefit-brand image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Image of a lightbulb with 3 waves radiating from it as a head for a torso wearing a tie."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
