Added alt attribute to .benefit-cost image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Image of a gear with 3 dollar signs in front of it."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
