Fixed link for Search Engine Optimization by changing section class to an id

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <figure class="hero"></figure>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a wooden surface with a laptop in the top left corner with a magnifying glass placed on the corner of the laptop, a cup of coffee in the bottom left corner, a pen cup with multicloured writing utensils in the top right corner, and a notebook in the center with 'SEO' written in the middle with 6 words and images relating to search engine optimization. A blue writing utensil is above the notebook and a black and red writing utensil is to the right of the notebook."/>
             <h2>Search Engine Optimization</h2>
             <p>
